# ChangeLog for sys-apps/razercfg
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/razercfg/ChangeLog,v 1.10 2012/10/14 15:11:49 joker Exp $

*razercfg-0.19 (14 Oct 2012)

  14 Oct 2012; Christian Birchinger <joker@gentoo.org> +razercfg-0.19.ebuild:
  Version bump

*razercfg-0.18 (25 Aug 2012)

  25 Aug 2012; Christian Birchinger <joker@gentoo.org> +razercfg-0.18.ebuild:
  Version bump

  26 Jul 2012; Johannes Huber <johu@gentoo.org> razercfg-0.16-r1.ebuild,
  razercfg-0.16.ebuild:
  Add missing slot dependencies on Qt.

  12 Jul 2012; Christian Birchinger <joker@gentoo.org> razercfg-0.16.ebuild,
  razercfg-0.16-r1.ebuild, razercfg-0.17.ebuild:
  Update SRC_URI to new domain

*razercfg-0.17_p20111028 (18 May 2012)

  18 May 2012; Christian Birchinger <joker@gentoo.org>
  +razercfg-0.17_p20111028.ebuild:
  Version bump using the most recent git version

  30 Apr 2012; Christian Birchinger <joker@gentoo.org> razercfg-0.16.ebuild,
  razercfg-0.16-r1.ebuild, razercfg-0.17.ebuild:
  Update homepage

  20 Feb 2012; Mike Gilbert <floppym@gentoo.org> metadata.xml:
  Drop no-herd.

*razercfg-0.17 (05 Oct 2011)

  05 Oct 2011; Christian Birchinger <joker@gentoo.org> +razercfg-0.17.ebuild,
  metadata.xml:
  Version bump with pm-utils support

*razercfg-0.16-r1 (26 Sep 2011)

  26 Sep 2011; Christian Birchinger <joker@gentoo.org>
  +razercfg-0.16-r1.ebuild:
  Create desktop entry for the qrazercfg frontend

*razercfg-0.16 (17 Aug 2011)

  17 Aug 2011; Christian Birchinger <joker@gentoo.org> +razercfg-0.16.ebuild,
  +files/razercfg-0.16-pidlogfix.patch, +files/razerd.init.d, +metadata.xml:
  Initial release