@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/razercfg
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/razercfg/ChangeLog,v 1.10 2012/10/14 15:11:49 joker Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/razercfg/ChangeLog,v 1.11 2012/10/14 15:13:56 joker Exp $
+
+  14 Oct 2012; Christian Birchinger <joker@gentoo.org> -razercfg-0.16.ebuild,
+  -razercfg-0.16-r1.ebuild:
+  Remove old versions
 
 *razercfg-0.19 (14 Oct 2012)
 
